crates/review-buddy/tests/snapshots/background__background_dashboard_dusk_160x40_theme.snap
---
source: crates/review-buddy/tests/background.rs
expression: "pinned(\"dusk\", (160, 40), BackgroundMode :: Theme)"
---
Reset: 6250
Rgb(49, 38, 40): 150
