crates/review-buddy/tests/snapshots/background__background_dashboard_dusk_160x40_yes.snap
---
source: crates/review-buddy/tests/background.rs
expression: "pinned(\"dusk\", (160, 40), BackgroundMode :: Yes)"
---
Rgb(49, 38, 40): 150
Rgb(5, 5, 7): 6250
