crates/review-buddy/tests/snapshots/background__background_dashboard_liminal-hq_100x30_no.snap
---
source: crates/review-buddy/tests/background.rs
expression: bg_histogram(&buffer)
---
Reset: 2887
Rgb(46, 36, 27): 113
