crates/review-buddy/tests/snapshots/background__background_dashboard_liminal-hq_160x40_no.snap
---
source: crates/review-buddy/tests/background.rs
expression: bg_histogram(&buffer)
---
Reset: 6250
Rgb(46, 36, 27): 150
