crates/review-buddy/tests/snapshots/background__background_dashboard_liminal_hq_100x30_no.snap
---
source: crates/review-buddy/tests/background.rs
expression: "pinned(\"liminal-hq\", (100, 30), BackgroundMode :: No)"
---
Reset: 2887
Rgb(46, 36, 27): 113
