crates/review-buddy/tests/snapshots/background__background_dashboard_liminal_hq_100x30_yes.snap
---
source: crates/review-buddy/tests/background.rs
expression: "pinned(\"liminal-hq\", (100, 30), BackgroundMode :: Yes)"
---
Rgb(46, 36, 27): 113
Rgb(5, 5, 7): 2887
