crates/review-buddy/tests/snapshots/background__background_dashboard_liminal_hq_160x40_no.snap
---
source: crates/review-buddy/tests/background.rs
expression: "pinned(\"liminal-hq\", (160, 40), BackgroundMode :: No)"
---
Reset: 6250
Rgb(46, 36, 27): 150
