crates/review-buddy/tests/snapshots/background__background_dashboard_liminal_hq_160x40_yes.snap
---
source: crates/review-buddy/tests/background.rs
expression: "pinned(\"liminal-hq\", (160, 40), BackgroundMode :: Yes)"
---
Rgb(46, 36, 27): 150
Rgb(5, 5, 7): 6250
